--- a/pages/230.html
+++ b/pages/230.html
@@ -309,26 +309,30 @@ margin-left: 0em;
 
 
 <div id="revision">
-      <p>I am a mathematician specializing in category theory. My PhD was completed in 1994 under the direction of Myles Tierney, and centered on categorical coherence problems and their relation to categorical logic. Subsequently I spent a few years in Sydney working with Ross Street, mainly on higher-dimensional categories, and then spent a few years in Chicago; the Chicago category seminar at the University of Chicago was founded during my stay.</p>
+    <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
+<body>
+<p>I am a <a class="existingWikiWord" href="/nlab/show/mathematics">mathematician</a> specializing in <a class="existingWikiWord" href="/nlab/show/category+theory">category theory</a>. My PhD was completed in 1994 under the direction of <a class="existingWikiWord" href="/nlab/show/Myles+Tierney">Myles Tierney</a>, and centered on categorical <a class="existingWikiWord" href="/nlab/show/coherence+relation">coherence</a> problems and their relation to <a class="existingWikiWord" href="/nlab/show/categorical+logic">categorical logic</a>. Subsequently I spent a few years in Sydney working with <a class="existingWikiWord" href="/nlab/show/Ross+Street">Ross Street</a>, mainly on <a class="existingWikiWord" href="/nlab/show/higher-dimensional+categories">higher-dimensional categories</a>, and then spent a few years in Chicago; the Chicago category seminar at the University of Chicago was founded during my stay.</p>
 
-<p>Since 2001 I have been a full-time parent; I presently live in Connecticut and continue to do mathematics as time allows. Among other things I actively participate in the <a href='http://golem.ph.utexas.edu/category/'><math class='maruku-mathml' display='inline' id='mathml_e9d23ce6d2279d8ced0e009901bd6b58e30eb65c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-Category Café</a> blog, and I coauthor the mathematics blog <a href='http://topologicalmusings.wordpress.com'>Topological Musings</a>. Since late 2013 I have also been a moderator at <a href='http://mathoverflow.net/questions'>MathOverflow</a>.</p>
+<p>Since 2001 I have been a full-time parent; I presently live in Connecticut and continue to do mathematics as time allows. Among other things I actively participate in the <a href="http://golem.ph.utexas.edu/category/"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-Category Café</a> blog, and I coauthor the mathematics blog <a href="http://topologicalmusings.wordpress.com">Topological Musings</a>. Since late 2013 I have also been a moderator at <a href="http://mathoverflow.net/questions">MathOverflow</a>.</p>
 
-<p>A few of my older scribblings can be found <a href='http://math.ucr.edu/home/baez/trimble'>here</a>; some more recent ones are at my nLab web <a href='https://ncatlab.org/toddtrimble/published/HomePage'>here</a>.</p>
+<p>A few of my older scribblings can be found <a href="http://math.ucr.edu/home/baez/trimble">here</a>; some more recent ones are at my nLab web <a href="https://ncatlab.org/toddtrimble/published/HomePage">here</a>.</p>
 
 <p>I can be reached at topological-dot-musings-at (insert gmail extension).</p>
-<div class='property'>category: <a class='category_link' href='/nlab/all_pages/people'>people</a></div>
+<div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
+
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on August 26, 2018 at 21:07:03.
+  Last revised on September 12, 2018 at 04:29:41.
   See the <a href="https://ncatlab.org/nlab/history/Todd Trimble" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Todd+Trimble" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Todd+Trimble/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Todd+Trimble" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Todd+Trimble" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Todd+Trimble" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Todd+Trimble/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/Todd+Trimble" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Todd+Trimble" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Todd Trimble/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
