--- a/pages/19682.html
+++ b/pages/19682.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Feit-Thompson theorem in nLab
+      Walter Feit in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Feit-Thompson theorem
+      Walter Feit
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/4459/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8977/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -309,219 +309,45 @@ margin-left: 0em;
 
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Contents</title></head>
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>related Lab entries</title></head>
 <body>
-<div class="rightHandSide">
-<div class="toc clickDown" tabindex="0">
-<h3 id="context">Context</h3>
-
-<h4 id="group_theory">Group Theory</h4>
-
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/group+theory">group theory</a></strong></p><ul>
-<li><a class="existingWikiWord" href="/nlab/show/group">group</a>, <a class="existingWikiWord" href="/nlab/show/%E2%88%9E-group">∞-group</a></li>
-
-<li><a class="existingWikiWord" href="/nlab/show/group+object">group object</a>, <a class="existingWikiWord" href="/nlab/show/group+object+in+an+%28%E2%88%9E%2C1%29-category">group object in an (∞,1)-category</a></li>
-
-<li><a class="existingWikiWord" href="/nlab/show/abelian+group">abelian group</a>, <a class="existingWikiWord" href="/nlab/show/spectrum">spectrum</a></li>
-
-<li><a class="existingWikiWord" href="/nlab/show/group+action">group action</a>, <a class="existingWikiWord" href="/nlab/show/%E2%88%9E-action">∞-action</a></li>
-
-<li><a class="existingWikiWord" href="/nlab/show/representation">representation</a>, <a class="existingWikiWord" href="/nlab/show/%E2%88%9E-representation">∞-representation</a></li>
-
-<li><a class="existingWikiWord" href="/nlab/show/progroup">progroup</a></li>
-
-<li><a class="existingWikiWord" href="/nlab/show/homogeneous+space">homogeneous space</a></li>
-</ul><h3 id="classical_groups">Classical groups</h3><ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/general+linear+group">general linear group</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/unitary+group">unitary group</a></p>
-
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/special+unitary+group">special unitary group</a>. <a class="existingWikiWord" href="/nlab/show/projective+unitary+group">projective unitary group</a></li>
+<li><a href="https://en.wikipedia.org/wiki/Walter_Feit">Wikipedia entry</a></li>
 </ul>
-</li>
 
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/orthogonal+group">orthogonal group</a></p>
-
-<ul>
-<li><a class="existingWikiWord" href="/nlab/show/special+orthogonal+group">special orthogonal group</a></li>
-</ul>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/symplectic+group">symplectic group</a></p>
-</li>
-</ul><h3 id="finite_groups">Finite groups</h3><ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/finite+group">finite group</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/symmetric+group">symmetric group</a>, <a class="existingWikiWord" href="/nlab/show/cyclic+group">cyclic group</a>, <a class="existingWikiWord" href="/nlab/show/braid+group">braid group</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/classification+of+finite+simple+groups">classification of finite simple groups</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/sporadic+finite+simple+groups">sporadic finite simple groups</a></p>
-
-<ul>
-<li><a class="existingWikiWord" href="/nlab/show/Monster+group">Monster group</a>, <a class="existingWikiWord" href="/nlab/show/Mathieu+group">Mathieu group</a></li>
-</ul>
-</li>
-</ul><h3 id="group_schemes">Group schemes</h3><ul>
-<li><a class="existingWikiWord" href="/nlab/show/algebraic+group">algebraic group</a></li>
-
-<li><a class="existingWikiWord" href="/nlab/show/abelian+variety">abelian variety</a></li>
-</ul><h3 id="topological_groups">Topological groups</h3><ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/topological+group">topological group</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/compact+topological+group">compact topological group</a>, <a class="existingWikiWord" href="/nlab/show/locally+compact+topological+group">locally compact topological group</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/maximal+compact+subgroup">maximal compact subgroup</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/string+group">string group</a></p>
-</li>
-</ul><h3 id="lie_groups">Lie groups</h3><ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/Lie+group">Lie group</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/compact+Lie+group">compact Lie group</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/Kac-Moody+group">Kac-Moody group</a></p>
-</li>
-</ul><h3 id="superlie_groups">Super-Lie groups</h3><ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/super+Lie+group">super Lie group</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/super+Euclidean+group">super Euclidean group</a></p>
-</li>
-</ul><h3 id="higher_groups">Higher groups</h3><ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/2-group">2-group</a></p>
-
-<ul>
-<li><a class="existingWikiWord" href="/nlab/show/crossed+module">crossed module</a>, <a class="existingWikiWord" href="/nlab/show/strict+2-group">strict 2-group</a></li>
-</ul>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/n-group">n-group</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/%E2%88%9E-group">∞-group</a></p>
+<h2 id="related_lab_entries">related <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/simplicial+group">simplicial group</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/Feit-Thompson+theorem">Feit-Thompson theorem</a></p>
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/crossed+complex">crossed complex</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/k-tuply+groupal+n-groupoid">k-tuply groupal n-groupoid</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/spectrum">spectrum</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/permutation+representation">permutation representation</a></p>
 </li>
 </ul>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/circle+n-group">circle n-group</a>, <a class="existingWikiWord" href="/nlab/show/string+2-group">string 2-group</a>, <a class="existingWikiWord" href="/nlab/show/fivebrane+Lie+6-group">fivebrane Lie 6-group</a></p>
-</li>
-</ul><h3 id="cohomology_and_extensions">Cohomology and Extensions</h3><ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/group+cohomology">group cohomology</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/group+extension">group extension</a>,</p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/%E2%88%9E-group+extension">∞-group extension</a>, <a class="existingWikiWord" href="/nlab/show/Ext-group">Ext-group</a></p>
-</li>
-</ul><h3 id="related_concepts">Related concepts</h3><ul>
-<li><a class="existingWikiWord" href="/nlab/show/quantum+group">quantum group</a></li>
-</ul><div>
-<p>
-  <a href="/nlab/edit/group+theory+-+contents">Edit this sidebar</a>
-</p>
-</div></div>
-</div>
-</div>
-
-<h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#statement">Statement</a></li><li><a href="#references">References</a></li></ul></div>
-<h2 id="statement">Statement</h2>
-
-<div class="num_theorem">
-<h6 id="theorem">Theorem</h6>
-
-<p>Every <a class="existingWikiWord" href="/nlab/show/finite+group">finite group</a> of <a class="existingWikiWord" href="/nlab/show/odd+number">odd</a> <a class="existingWikiWord" href="/nlab/show/order">order</a> is a <a class="existingWikiWord" href="/nlab/show/solvable+group">solvable group</a>.</p>
-</div>
-
-<p>This is due to (<a href="#FeitThompson62">Feit-Thompson 62</a>).</p>
-
-<p>A fully formalized proof in <a class="existingWikiWord" href="/nlab/show/Coq">Coq</a> has been announced in (<a href="#INRIA">INRIA 2012</a>)</p>
-
-<h2 id="references">References</h2>
-
-<ul>
-<li id="FeitThompson62">
-<p><a class="existingWikiWord" href="/nlab/show/Walter+Feit">Walter Feit</a>, John Thompson, <em>A solvability criterion for finite groups and some consequences</em>, Proc. Nat. Acad. Sci. 48 (6): 968–970, 1962 (<a href="http://www.jstor.org/stable/71265">JSTOR</a>)</p>
-</li>
-
-<li id="INRIA">
-<p>INRIA, <em><a href="http://www.msr-inria.inria.fr/events-news/feit-thompson-proved-in-coq">Feit-Thompson theorem has been totally checked in Coq</a></em></p>
-</li>
-</ul>
-</body></html>
+<div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on September 12, 2018 at 07:21:41.
-  See the <a href="https://ncatlab.org/nlab/history/Feit-Thompson theorem" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on September 12, 2018 at 07:20:11.
+  See the <a href="https://ncatlab.org/nlab/history/Walter Feit" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Feit-Thompson+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Feit-Thompson+theorem/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Feit-Thompson+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Feit-Thompson+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Feit-Thompson theorem/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Walter+Feit" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Walter Feit/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Feit-Thompson+theorem" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Walter+Feit" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Feit-Thompson+theorem" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Walter+Feit" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Feit-Thompson+theorem" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Walter+Feit" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
