--- a/pages/15275.html
+++ b/pages/15275.html
@@ -331,7 +331,7 @@ V_N(K; q) = \frac{J_N(K; q)}{J_N(\bigcirc; q)}.
 
 <h3 id="IdeaGenerally">Generally</h3>
 
-<p>More generally, volume conjectures state convergence of the <a class="existingWikiWord" href="/nlab/show/Chern-Simons+theory">Chern-Simons theory</a> quantum invariant (realized notably via <a class="existingWikiWord" href="/nlab/show/Reshetikhin-Turaev+construction">Reshetikhin-Turaev construction</a> or <a class="existingWikiWord" href="/nlab/show/Turaev-Viro+construction">Turaev-Viro construction</a>) on <a class="existingWikiWord" href="/nlab/show/hyperbolic+3-manifold">hyperbolic 3-manifold</a> to the <a class="existingWikiWord" href="/nlab/show/complex+volume">complex volume</a> (for Reshetikhin-Turaev) or to the plain volume (for Turaev-Viro).</p>
+<p>More generally, volume conjectures state convergence of something like the <a class="existingWikiWord" href="/nlab/show/Chern-Simons+theory">Chern-Simons theory</a> quantum invariant (realized notably via <a class="existingWikiWord" href="/nlab/show/Reshetikhin-Turaev+construction">Reshetikhin-Turaev construction</a> or <a class="existingWikiWord" href="/nlab/show/Turaev-Viro+construction">Turaev-Viro construction</a>) on <a class="existingWikiWord" href="/nlab/show/hyperbolic+3-manifolds">hyperbolic 3-manifolds</a> to the <a class="existingWikiWord" href="/nlab/show/complex+volume">complex volume</a> (for Reshetikhin-Turaev) or to the plain volume (for Turaev-Viro).</p>
 
 <p>See (<a href="#ChenYang15">Chen-Yang 15</a>)</p>
 
@@ -422,14 +422,14 @@ V_N(K; q) = \frac{J_N(K; q)}{J_N(\bigcirc; q)}.
 
 <div class="revisedby">
   <p>
-  Last revised on September  8, 2018 at 13:36:49.
+  Last revised on September 12, 2018 at 08:48:07.
   See the <a href="https://ncatlab.org/nlab/history/volume conjecture" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/volume+conjecture" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/volume+conjecture/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/volume+conjecture" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/volume+conjecture" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/volume+conjecture" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/volume+conjecture/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/volume+conjecture" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/volume+conjecture" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/volume conjecture/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
