--- a/pages/15275.html
+++ b/pages/15275.html
@@ -416,20 +416,28 @@ V_N(K; q) = \frac{J_N(K; q)}{J_N(\bigcirc; q)}.
 <ul>
 <li><a class="existingWikiWord" href="/nlab/show/Robbert+Dijkgraaf">Robbert Dijkgraaf</a>, Hiroyuki Fuji, <em>The Volume Conjecture and Topological Strings</em> (<a href="http://arxiv.org/abs/0903.2084">arXiv:0903.2084</a>)</li>
 </ul>
+
+<p>A conceptual explanation of the volume conjecture was proposed in</p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/Edward+Witten">Edward Witten</a>, <em>Analytic Continuation Of Chern-Simons Theory</em> (<a href="https://arxiv.org/abs/1001.2933">arXiv:1001.2933</a>)</li>
+</ul>
+
+<p>(but it seems that as a sketch for a rigorous proof, it didn’t catch on).</p>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on September 12, 2018 at 08:48:07.
+  Last revised on September 12, 2018 at 09:46:44.
   See the <a href="https://ncatlab.org/nlab/history/volume conjecture" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/volume+conjecture" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/volume+conjecture/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/volume+conjecture" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/volume+conjecture" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/volume+conjecture" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/volume+conjecture/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/volume+conjecture" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/volume+conjecture" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/volume conjecture/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
