--- a/pages/18178.html
+++ b/pages/18178.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8275/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8275/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -763,6 +763,8 @@ margin-left: 0em;
 
 <p>In the context of <a class="existingWikiWord" href="/nlab/show/quantum+mechanics">quantum mechanics</a>, the <strong>collapse of the wave function</strong>, also known as the <strong>reduction of the wave packet</strong>, is said to occur after <a class="existingWikiWord" href="/nlab/show/observation">observation</a> or <a class="existingWikiWord" href="/nlab/show/measurement">measurement</a>, when a wave function expressed as the sum of <a class="existingWikiWord" href="/nlab/show/eigenfunctions">eigenfunctions</a> of the observable is projected randomly onto one of them. Different <a class="existingWikiWord" href="/nlab/show/interpretations+of+quantum+mechanics">interpretations of quantum mechanics</a> understand this process differently.</p>
 
+<p>The perspective associated with the <em><a class="existingWikiWord" href="/nlab/show/Bayesian+interpretation+of+quantum+mechanics">Bayesian interpretation of quantum mechanics</a></em> observes (see <a href="#RelationToConditionalExpectationValues">below</a>) that the apparent collapse is just the mathematical reflection of the formula for <a class="existingWikiWord" href="/nlab/show/conditional+expectation+values">conditional expectation values</a> in <a class="existingWikiWord" href="/nlab/show/quantum+probability+theory">quantum probability theory</a>.</p>
+
 <h2 id="RelationToConditionalExpectationValues">Relation to conditional expectation values</h2>
 
 <p>There is a close relation between wave function collapse and <a class="existingWikiWord" href="/nlab/show/conditional+expectation+values">conditional expectation values</a> in <a class="existingWikiWord" href="/nlab/show/quantum+probability">quantum probability</a> (e.g. <a href="#Kuperberg05">Kuperberg 05, section 1.2</a>, <a href="#Yuan12">Yuan 12</a>):</p>
@@ -857,6 +859,10 @@ margin-left: 0em;
 </li>
 
 <li>
+<p><a class="existingWikiWord" href="/nlab/show/Bayesian+interpretation+of+quantum+mechanics">Bayesian interpretation of quantum mechanics</a></p>
+</li>
+
+<li>
 <p><a class="existingWikiWord" href="/nlab/show/propositions+as+projections">propositions as projections</a></p>
 </li>
 </ul>
@@ -882,7 +888,13 @@ margin-left: 0em;
 <p>See also</p>
 
 <ul>
-<li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Wave_function_collapse">Wave function collapse</a></em></li>
+<li>
+<p>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Wave_function_collapse">Wave function collapse</a></em></p>
+</li>
+
+<li>
+<p>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Born_rule">Born rule</a></em></p>
+</li>
 </ul>
 </body></html>
 
@@ -890,14 +902,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 10, 2018 at 19:14:14.
+  Last revised on September 12, 2018 at 10:50:31.
   See the <a href="https://ncatlab.org/nlab/history/wave function collapse" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/wave+function+collapse" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/wave+function+collapse/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/wave+function+collapse" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/wave+function+collapse" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/wave+function+collapse" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/wave+function+collapse/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/wave+function+collapse" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/wave+function+collapse" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/wave function collapse/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
