--- a/pages/15275.html
+++ b/pages/15275.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/6801/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/6801/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -420,17 +420,17 @@ V_N(K; q) = \frac{J_N(K; q)}{J_N(\bigcirc; q)}.
 <p>A conceptual explanation of the volume conjecture was proposed in</p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/Edward+Witten">Edward Witten</a>, <em>Analytic Continuation Of Chern-Simons Theory</em> (<a href="https://arxiv.org/abs/1001.2933">arXiv:1001.2933</a>)</li>
+<li><a class="existingWikiWord" href="/nlab/show/Edward+Witten">Edward Witten</a>, <em>Analytic Continuation Of Chern-Simons Theory</em>, AMS/IP Stud. Adv. Math 50 (2011): 347 (<a href="https://arxiv.org/abs/1001.2933">arXiv:1001.2933</a>)</li>
 </ul>
 
-<p>(but it seems that as a sketch for a rigorous proof, it didn’t catch on).</p>
+<p>(but it seems that as a sketch or strategy for a rigorous proof, it didn’t catch on).</p>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on September 12, 2018 at 09:46:44.
+  Last revised on September 12, 2018 at 10:14:40.
   See the <a href="https://ncatlab.org/nlab/history/volume conjecture" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
