--- a/pages/18840.html
+++ b/pages/18840.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8192/#Item_11" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8192/#Item_15" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -865,6 +865,8 @@ margin-left: 0em;
 
 <p>The formulation of <a class="existingWikiWord" href="/nlab/show/perturbative+quantum+field+theory">perturbative quantum field theory</a> from the algebraic perspective of quantum probability is known as <em><a class="existingWikiWord" href="/nlab/show/perturbative+algebraic+quantum+field+theory">perturbative algebraic quantum field theory</a></em> (<a class="existingWikiWord" href="/nlab/show/pAQFT">pAQFT</a>).</p>
 
+<p>The sentiment that <a class="existingWikiWord" href="/nlab/show/quantum+physics">quantum physics</a> <em>is</em> quantum probability theory is also referred to as the <em><a class="existingWikiWord" href="/nlab/show/Bayesian+interpretation+of+quantum+mechanics">Bayesian interpretation of quantum mechanics</a></em> (“QBism”).</p>
+
 <h2 id="properties">Properties</h2>
 
 <h3 id="conditional_expectation_and_wave_function_collapse">Conditional expectation and Wave function collapse</h3>
@@ -961,11 +963,15 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/quantum+logic">quantum logic</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/quantum+statistical+mechanics">quantum statistical mechanics</a></p>
 </li>
 
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Bayesian+interpretation+of+quantum+mechanics">Bayesian interpretation of quantum mechanics</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/quantum+logic">quantum logic</a></p>
 </li>
 </ul>
 
@@ -1024,14 +1030,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 10, 2018 at 19:10:17.
+  Last revised on September 12, 2018 at 10:35:25.
   See the <a href="https://ncatlab.org/nlab/history/quantum probability" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quantum+probability" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+probability/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/quantum+probability" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+probability" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quantum+probability" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+probability/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/quantum+probability" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+probability" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/quantum probability/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
