--- a/pages/19685.html
+++ b/pages/19685.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      statistical mechanics in nLab
+      Liouville&#39;s equation in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      statistical mechanics
+      Liouville&#39;s equation
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8980/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -309,67 +309,57 @@ margin-left: 0em;
 
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Related entries</title></head>
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
-<p><strong>Statistical mechanics</strong> is the theoretical study of systems with a large number of degrees of freedom, and in particular statistical features of ensembles of large systems. An ensemble is a theoretical term denoting a collection of similar large systems under consideration, where statistical features of the ensemble are considered. Alternatively, an ensemble may be a probability distribution of similar physical systems. Statistical mechanics wants to extract a small number of relevant “macroscopical” features of a physical system determined as the average over an ensemble. One may consider ensembles with fixed features, such as the number of particles or the total energy, and in which hypothetically an ergodic hypothesis is true: after sufficient passage of time the system will evolve in a system which is arbitrary close to any given member of the ensemble.</p>
-
-<h2 id="related_entries">Related entries</h2>
+<h2 id="related_concepts">Related concepts</h2>
 
 <ul>
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/thermodynamics">thermodynamics</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/Hamilton%27s+equations">Hamilton's equations</a></p>
 </li>
 
 <li>
-<p><span class="newWikiWord">Brownian motion<a href="/nlab/new/Brownian+motion">?</a></span></p>
+<p><a class="existingWikiWord" href="/nlab/show/statistical+mechanics">statistical mechanics</a></p>
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Liouville%27s+equation">Liouville's equation</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/quantum+statistical+mechanics">quantum statistical mechanics</a></p>
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Langevin+equation">Langevin equation</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/stochastic+process">stochastic process</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/fluctuation-dissipation+theorem">fluctuation-dissipation theorem</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/random+matrix+theory">random matrix theory</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/Euclidean+field+theory">Euclidean field theory</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/Bayesian+interpretation+of+quantum+mechanics">Bayesian interpretation of quantum mechanics</a></p>
 </li>
 </ul>
-<div class="property">category: <a class="category_link" href="/nlab/all_pages/physics">physics</a></div></body></html>
+
+<h2 id="references">References</h2>
+
+<p>See also</p>
+
+<ul>
+<li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Liouville%27s_theorem_(Hamiltonian)">Liouville's theorem (Hamiltonian)</a></em></li>
+</ul>
+</body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on September 12, 2018 at 10:44:46.
-  See the <a href="https://ncatlab.org/nlab/history/statistical mechanics" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on September 12, 2018 at 10:51:12.
+  See the <a href="https://ncatlab.org/nlab/history/Liouville&#39;s equation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/statistical+mechanics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/statistical+mechanics/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/statistical+mechanics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/statistical+mechanics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/statistical mechanics/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Liouville%27s+equation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Liouville&#39;s equation/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/statistical+mechanics" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Liouville%27s+equation" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/statistical+mechanics" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Liouville%27s+equation" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/statistical+mechanics" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Liouville%27s+equation" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
