--- a/pages/3485.html
+++ b/pages/3485.html
@@ -660,9 +660,9 @@ margin-left: 0em;
 <div class="num_prop" id="WhenAllVirtualLinearRepsAreVirtualPermutationReps">
 <h6 id="proposition_2">Proposition</h6>
 
-<p><strong>(when all virtual linear reps are virtual permutation reps)</strong></p>
+<p><strong>(virtual linear reps from virtual permutation reps)</strong></p>
 
-<p>The comparison morphism</p>
+<p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi></mrow><annotation encoding="application/x-tex">k</annotation></semantics></math> of <a class="existingWikiWord" href="/nlab/show/characteristic+zero">characteristic zero</a>, the comparison morphism</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>A</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mover><mo>⟶</mo><mrow><mi>β</mi><mo>=</mo><mi>K</mi><mo stretchy="false">(</mo><mi>k</mi><mo stretchy="false">[</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo stretchy="false">]</mo><mo stretchy="false">)</mo></mrow></mover><mi>R</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
   A(G) \overset{ \beta = K(k[-]) }{\longrightarrow} R(G)
 
@@ -675,25 +675,41 @@ margin-left: 0em;
 
 <ol>
 <li>
-<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/p-group">p-group</a>;</p>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/p-group">p-group</a>,</p>
 </li>
 
 <li>
-<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/cyclic+group">cyclic group</a>;</p>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/cyclic+group">cyclic group</a>,</p>
 </li>
 
 <li>
-<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo>=</mo><msub><mi>S</mi> <mn>4</mn></msub></mrow><annotation encoding="application/x-tex">G = S_4</annotation></semantics></math> the <a class="existingWikiWord" href="/nlab/show/symmetric+group">symmetric group</a> on four elements</p>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo>=</mo><msub><mi>S</mi> <mn>4</mn></msub></mrow><annotation encoding="application/x-tex">G = S_4</annotation></semantics></math> is the <a class="existingWikiWord" href="/nlab/show/symmetric+group">symmetric group</a> on four elements;</p>
 </li>
 </ol>
 </li>
 
 <li>
-<p>is <em>not</em> <a class="existingWikiWord" href="/nlab/show/surjective+map">surjective</a> in the following cases:</p>
+<p>is <em>not</em> <a class="existingWikiWord" href="/nlab/show/surjective+map">surjective</a> in the following example:</p>
 
-<ol>
-<li><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo>=</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mn>3</mn><mo>×</mo><msub><mi>Q</mi> <mn>8</mn></msub></mrow><annotation encoding="application/x-tex">G = \mathbb{Z}/3 \times Q_8</annotation></semantics></math> (<a class="existingWikiWord" href="/nlab/show/direct+product">direct product</a> of <a class="existingWikiWord" href="/nlab/show/cyclic+group">cyclic group</a> of <a class="existingWikiWord" href="/nlab/show/order+of+a+group">order</a> 3 with <a class="existingWikiWord" href="/nlab/show/quaternion+group">quaternion group</a> or order 8)</li>
-</ol>
+<ul>
+<li><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo>=</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mn>3</mn><mo>×</mo><msub><mi>Q</mi> <mn>8</mn></msub></mrow><annotation encoding="application/x-tex">G = \mathbb{Z}/3 \times Q_8</annotation></semantics></math> (<a class="existingWikiWord" href="/nlab/show/direct+product">direct product</a> of <a class="existingWikiWord" href="/nlab/show/cyclic+group">cyclic group</a> of <a class="existingWikiWord" href="/nlab/show/order+of+a+group">order</a> 3 with <a class="existingWikiWord" href="/nlab/show/quaternion+group">quaternion group</a> or order 8);</li>
+</ul>
+</li>
+
+<li>
+<p>is <a class="existingWikiWord" href="/nlab/show/injective+map">injective</a> precisely if</p>
+
+<ul>
+<li><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/cyclic+group">cyclic group</a>;</li>
+</ul>
+</li>
+
+<li>
+<p>is an <a class="existingWikiWord" href="/nlab/show/isomorphism">isomorphism</a> if</p>
+
+<ul>
+<li><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/cyclic+group">cyclic group</a>.</li>
+</ul>
 </li>
 </ol>
 </div>
@@ -701,20 +717,34 @@ margin-left: 0em;
 <div class="proof">
 <h6 id="proof">Proof</h6>
 
-<p>The proof for <a class="existingWikiWord" href="/nlab/show/p-groups">p-groups</a> is due to <a href="#Segal72">Segal 72</a>, see also <a href="#Feit67">Feit 67</a>, <a href="#Ritter72">Ritter 72</a>.</p>
+<p>The proof of surjectivity for <a class="existingWikiWord" href="/nlab/show/p-groups">p-groups</a> is due to <a href="#Segal72">Segal 72</a>. (As Segal remarks on his first page, it may also be deduced from <a href="#Feit67">Feit 67 (14.3)</a>. See also <a href="#Ritter72">Ritter 72</a>.)</p>
 
-<p>The case of <a class="existingWikiWord" href="/nlab/show/cyclic+groups">cyclic groups</a> follows from the case of <a class="existingWikiWord" href="/nlab/show/p-groups">p-groups</a> by the <a class="existingWikiWord" href="/nlab/show/fundamental+theorem+of+cyclic+groups">fundamental theorem of cyclic groups</a>.</p>
+<p>From this the surjectivity for <a class="existingWikiWord" href="/nlab/show/cyclic+groups">cyclic groups</a> follows via the <a class="existingWikiWord" href="/nlab/show/fundamental+theorem+of+cyclic+groups">fundamental theorem of cyclic groups</a>.</p>
 
-<p>For the example that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo>=</mo><msub><mi>S</mi> <mn>4</mn></msub></mrow><annotation encoding="application/x-tex">G = S_4</annotation></semantics></math> a proof is spelled out at <em><a href="Gram-Schmidt+process#CategorifiedGramSchmidtProcess">Categorified Gram-Schmidt process</a></em>. See also the example in <a href="#Montaldi">Montaldi</a> <a href="http://www.maths.manchester.ac.uk/~jm/wiki/Representations/S4">here</a>.</p>
+<p>A proof of surjectivity in the example that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo>=</mo><msub><mi>S</mi> <mn>4</mn></msub></mrow><annotation encoding="application/x-tex">G = S_4</annotation></semantics></math> is spelled out at <em><a href="Gram-Schmidt+process#CategorifiedGramSchmidtProcess">Categorified Gram-Schmidt process</a></em>. See also the example in <a href="#Montaldi">Montaldi</a> <a href="http://www.maths.manchester.ac.uk/~jm/wiki/Representations/S4">here</a>.</p>
 
-<p>The counter-example <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℤ</mi><mo stretchy="false">/</mo><mn>3</mn><mo>×</mo><msub><mi>Q</mi> <mn>8</mn></msub></mrow><annotation encoding="application/x-tex">\mathbb{Z}/3 \times Q_8</annotation></semantics></math> was remarked in <a href="#Serre77">Serre 77, p. 104</a></p>
+<p>The non-surjectivity for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo>=</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mn>3</mn><mo>×</mo><msub><mi>Q</mi> <mn>8</mn></msub></mrow><annotation encoding="application/x-tex">G = \mathbb{Z}/3 \times Q_8</annotation></semantics></math> was remarked in <a href="#Serre77">Serre 77, p. 104</a>.</p>
+
+<p>To see that injectivity holds precisely for <a class="existingWikiWord" href="/nlab/show/cyclic+groups">cyclic groups</a>, notice that in <a class="existingWikiWord" href="/nlab/show/characteristic+zero">characteristic zero</a> we have that</p>
+
+<ol>
+<li>
+<p>the number of <a class="existingWikiWord" href="/nlab/show/isomorphism+classes">isomorphism classes</a> of <a class="existingWikiWord" href="/nlab/show/irreducible+representations">irreducible representations</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> equals the number of <a class="existingWikiWord" href="/nlab/show/conjugacy+classes">conjugacy classes</a> of <em><a class="existingWikiWord" href="/nlab/show/cyclic+group">cyclic</a></em> <a class="existingWikiWord" href="/nlab/show/subgroups">subgroups</a>;</p>
+</li>
+
+<li>
+<p>the number of <a class="existingWikiWord" href="/nlab/show/isomorphism+classes">isomorphism classes</a> of indecomposable (<a class="existingWikiWord" href="/nlab/show/transitive+action">transitive</a>) <a class="existingWikiWord" href="/nlab/show/G-sets">G-sets</a> (i.e. <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/orbit">orbit</a> types) is the number of <a class="existingWikiWord" href="/nlab/show/conjugacy+classes">conjugacy classes</a> of <em>all</em> <a class="existingWikiWord" href="/nlab/show/subgroups">subgroups</a>.</p>
+</li>
+</ol>
+
+<p>(stolen from <a href="https://mathoverflow.net/a/21204/381">Webster on MO, 2013</a>).</p>
+
+<p>This means that for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> not a cyclic group we have <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>dim</mi><mo stretchy="false">(</mo><mi>A</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mo>&gt;</mo><mi>dim</mi><mo stretchy="false">(</mo><mi>R</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">dim(A(G)) \gt dim(R(G))</annotation></semantics></math>, so that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi></mrow><annotation encoding="application/x-tex">\beta</annotation></semantics></math> cannot be injective. On the other hand, for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> a cyclic group this says that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>dim</mi><mo stretchy="false">(</mo><mi>A</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mo>=</mo><mi>dim</mi><mo stretchy="false">(</mo><mi>R</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">dim(A(G)) = dim(R(G))</annotation></semantics></math>, so that if <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi></mrow><annotation encoding="application/x-tex">\beta</annotation></semantics></math> were not injective, its image would have dimension <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>&lt;</mo><mi>dim</mi><mo stretchy="false">(</mo><mi>R</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\lt dim(R(G))</annotation></semantics></math>, which however contradicts the surjectivity asserted by item 2 above.</p>
 </div>
 
 <p>A more general analysis of the <a class="existingWikiWord" href="/nlab/show/cokernel">cokernel</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi></mrow><annotation encoding="application/x-tex">\beta</annotation></semantics></math> is due to <a href="#Berz94">Berz 94</a>, reviewed and expanded on in <a href="#HambletonTaylor99">Hambleton-Taylor 99</a>.</p>
 
 <p>See also the review of the literature in <a href="#BartelDokchitser14">Bartel-Dokchitser 14, p. 1</a>.</p>
-
-<p>Apparently <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi></mrow><annotation encoding="application/x-tex">\beta</annotation></semantics></math> is an <a class="existingWikiWord" href="/nlab/show/isomorphism">isomorphism</a> precisely if <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/cyclic+group">cyclic group</a> (see <a href="#PlanetMathRepAndBurn">PlanetMath</a>).</p>
 
 <h2 id="related_entries">Related entries</h2>
 
@@ -803,14 +833,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 12, 2018 at 11:05:42.
+  Last revised on September 12, 2018 at 12:56:44.
   See the <a href="https://ncatlab.org/nlab/history/permutation representation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/permutation+representation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/permutation+representation/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/permutation+representation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/permutation+representation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/permutation+representation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/permutation+representation/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/permutation+representation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/permutation+representation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/permutation representation/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
