--- a/pages/9436.html
+++ b/pages/9436.html
@@ -624,7 +624,7 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#definition">Definition</a></li><li><a href="#properties">Properties</a></li><li><a href="#related_concepts">Related concepts</a></li></ul></div>
+<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#definition">Definition</a></li><li><a href="#properties">Properties</a></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
 <h2 id="idea">Idea</h2>
 
 <p>Many algebraic objects have a <a class="existingWikiWord" href="/nlab/show/representation+theory">representation theory</a> in which they act on other things; for example, <a class="existingWikiWord" href="/nlab/show/groups">groups</a> often act on sets and <a class="existingWikiWord" href="/nlab/show/algebras">algebras</a> act on <a class="existingWikiWord" href="/nlab/show/modules">modules</a>. In these situations, the acting object can often be viewed as an example of the type of thing acted upon: a group has an underlying set and an algebra has an underlying module. The multiplication in the acting object then defines an action of the object on this unstructured copy of itself. This is called the <strong>regular representation</strong> and is an extremely useful representation to study as it only involves the object itself, whence is in a sense <em>canonical</em>, but contains a lot of information, as opposed to, say, the <a class="existingWikiWord" href="/nlab/show/trivial+representation">trivial representation</a> (which is also canonical).</p>
@@ -684,20 +684,28 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/alternating+representation">alternating representation</a></p>
 </li>
 </ul>
+
+<h2 id="references">References</h2>
+
+<p>Lecture notes include</p>
+
+<ul>
+<li id="tomDieck09"><a class="existingWikiWord" href="/nlab/show/Tammo+tom+Dieck">Tammo tom Dieck</a>, section 1.10 of <em>Representation theory</em>, 2009 (<a href="http://www.uni-math.gwdg.de/tammo/rep.pdf">pdf</a>)</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on September 11, 2018 at 13:21:15.
+  Last revised on September 12, 2018 at 13:27:03.
   See the <a href="https://ncatlab.org/nlab/history/regular representation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/regular+representation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/regular+representation/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/regular+representation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/regular+representation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/regular+representation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/regular+representation/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/regular+representation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/regular+representation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/regular representation/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
