--- a/pages/11391.html
+++ b/pages/11391.html
@@ -318,7 +318,13 @@ margin-left: 0em;
 <h2 id="writings">writings</h2>
 
 <ul>
-<li id="tomDieck79"><a class="existingWikiWord" href="/nlab/show/Tammo+tom+Dieck">Tammo tom Dieck</a>, <em><a class="existingWikiWord" href="/nlab/show/Transformation+Groups+and+Representation+Theory">Transformation Groups and Representation Theory</a></em>, Lecture Notes in Mathematics 766, Springer 1979</li>
+<li id="tomDieck79">
+<p><a class="existingWikiWord" href="/nlab/show/Tammo+tom+Dieck">Tammo tom Dieck</a>, <em><a class="existingWikiWord" href="/nlab/show/Transformation+Groups+and+Representation+Theory">Transformation Groups and Representation Theory</a></em>, Lecture Notes in Mathematics 766, Springer 1979</p>
+</li>
+
+<li id="tomDieck09">
+<p><a class="existingWikiWord" href="/nlab/show/Tammo+tom+Dieck">Tammo tom Dieck</a>, <em>Representation theory</em>, 2009 (<a href="http://www.uni-math.gwdg.de/tammo/rep.pdf">pdf</a>)</p>
+</li>
 </ul>
 
 <h2 id="related_lab_entries">related <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>Lab entries</h2>
@@ -326,6 +332,10 @@ margin-left: 0em;
 <ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/algebraic+topology">algebraic topology</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/representation+theory">representation theory</a></p>
 </li>
 
 <li>
@@ -342,14 +352,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 10, 2018 at 11:31:08.
+  Last revised on September 12, 2018 at 13:26:14.
   See the <a href="https://ncatlab.org/nlab/history/Tammo tom Dieck" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Tammo+tom+Dieck" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Tammo+tom+Dieck/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Tammo+tom+Dieck" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Tammo+tom+Dieck" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Tammo+tom+Dieck" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Tammo+tom+Dieck/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Tammo+tom+Dieck" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Tammo+tom+Dieck" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Tammo tom Dieck/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
