--- a/pages/16174.html
+++ b/pages/16174.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/7282/#Item_22" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/7282/#Item_27" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -544,19 +544,27 @@ margin-left: 0em;
 <li id="Burnside1897"><a class="existingWikiWord" href="/nlab/show/William+Burnside">William Burnside</a>, <em>Theory of Groups of Finite Order</em>, 1897 (<a href="http://www.gutenberg.org/files/40395/40395-pdf.pdf">pdf</a>)</li>
 </ul>
 
-<p>A textbook account is in</p>
+<p>Textbook and lecture notes include</p>
 
 <ul>
 <li id="tomDieck79">
 <p><a class="existingWikiWord" href="/nlab/show/Tammo+tom+Dieck">Tammo tom Dieck</a>, <em><a class="existingWikiWord" href="/nlab/show/Transformation+Groups+and+Representation+Theory">Transformation Groups and Representation Theory</a></em>, Springer 1979</p>
 </li>
 
+<li id="tomDieck09">
+<p><a class="existingWikiWord" href="/nlab/show/Tammo+tom+Dieck">Tammo tom Dieck</a>, <em>Representation theory</em>, 2009 (<a href="http://www.uni-math.gwdg.de/tammo/rep.pdf">pdf</a>)</p>
+</li>
+</ul>
+
+<p>See also</p>
+
+<ul>
 <li id="GreenleesMay95">
 <p><a class="existingWikiWord" href="/nlab/show/John+Greenlees">John Greenlees</a>, <a class="existingWikiWord" href="/nlab/show/Peter+May">Peter May</a>, section 2 of <em>Equivariant stable homotopy theory</em>, in I.M. James (ed.), <em>Handbook of Algebraic Topology</em> , pp. 279-325. 1995. (<a href="http://www.math.uchicago.edu/~may/PAPERS/Newthird.pdf">pdf</a>)</p>
 </li>
 
 <li id="Schanuel91">
-<p><a class="existingWikiWord" href="/nlab/show/Stephen+Schanuel">Stephen Schanuel</a>, 1991, <em>Negative sets have Euler characteristic and dimension</em>. In: Proc. Como 1990. Lecture Notes in Mathematics, vol. 1488. Springer-Verlag, Berlin, pp. 379–385.</p>
+<p><a class="existingWikiWord" href="/nlab/show/Stephen+Schanuel">Stephen Schanuel</a>, 1991, <em>Negative sets have Euler characteristic and dimension</em>, in: Proc. Como 1990. Lecture Notes in Mathematics, vol. 1488. Springer-Verlag, Berlin, pp. 379–385.</p>
 </li>
 </ul>
 
@@ -595,14 +603,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 12, 2018 at 06:28:08.
+  Last revised on September 12, 2018 at 13:28:07.
   See the <a href="https://ncatlab.org/nlab/history/Burnside ring" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Burnside+ring" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Burnside+ring/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/Burnside+ring" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Burnside+ring" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Burnside+ring" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Burnside+ring/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/Burnside+ring" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Burnside+ring" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Burnside ring/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
