--- a/pages/1788.html
+++ b/pages/1788.html
@@ -309,21 +309,21 @@ margin-left: 0em;
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
-<p><a class="existingWikiWord" href="/schreiber/show/Introduction+to+Higher+Supergeometry">Introduction to Higher Supergeometry</a></p>
+<p>A proof of surjectivity in the example that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo>=</mo><msub><mi>S</mi> <mn>4</mn></msub></mrow><annotation encoding="application/x-tex">G = S_4</annotation></semantics></math> is spelled out at <em><a href="Gram-Schmidt+process#CategorifiedGramSchmidtProcess">Categorified Gram-Schmidt process</a></em>. See also the example in <a href="#Montaldi">Montaldi</a> <a href="http://www.maths.manchester.ac.uk/~jm/wiki/Representations/S4">here</a>.</p>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on September 12, 2018 at 04:27:28.
+  Last revised on September 12, 2018 at 13:16:11.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1678" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1678 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1679" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1679 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
