--- a/pages/3485.html
+++ b/pages/3485.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -662,7 +662,7 @@ margin-left: 0em;
 
 <p><strong>(virtual linear reps from virtual permutation reps)</strong></p>
 
-<p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi></mrow><annotation encoding="application/x-tex">k</annotation></semantics></math> of <a class="existingWikiWord" href="/nlab/show/characteristic+zero">characteristic zero</a>, the comparison morphism</p>
+<p>For <a class="existingWikiWord" href="/nlab/show/ground+field">ground field</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi><mo>=</mo><mi>ℚ</mi></mrow><annotation encoding="application/x-tex">k = \mathbb{Q}</annotation></semantics></math> the <a class="existingWikiWord" href="/nlab/show/rational+numbers">rational numbers</a>, the comparison morphism</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>A</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mover><mo>⟶</mo><mrow><mi>β</mi><mo>=</mo><mi>K</mi><mo stretchy="false">(</mo><mi>k</mi><mo stretchy="false">[</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo stretchy="false">]</mo><mo stretchy="false">)</mo></mrow></mover><mi>R</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
   A(G) \overset{ \beta = K(k[-]) }{\longrightarrow} R(G)
 
@@ -671,19 +671,15 @@ margin-left: 0em;
 
 <ol>
 <li>
-<p>is <a class="existingWikiWord" href="/nlab/show/surjective+map">surjective</a> in the following cases (not all mutually exclusive):</p>
+<p>is <a class="existingWikiWord" href="/nlab/show/surjective+map">surjective</a> in the following cases (not mutually exclusive):</p>
 
 <ol>
 <li>
-<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/p-group">p-group</a>,</p>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/p-primary+group">p-primary group</a>,</p>
 </li>
 
 <li>
 <p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/cyclic+group">cyclic group</a>,</p>
-</li>
-
-<li>
-<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo>=</mo><msub><mi>S</mi> <mn>4</mn></msub></mrow><annotation encoding="application/x-tex">G = S_4</annotation></semantics></math> is the <a class="existingWikiWord" href="/nlab/show/symmetric+group">symmetric group</a> on four elements;</p>
 </li>
 </ol>
 </li>
@@ -717,15 +713,13 @@ margin-left: 0em;
 <div class="proof">
 <h6 id="proof">Proof</h6>
 
-<p>The proof of surjectivity for <a class="existingWikiWord" href="/nlab/show/p-groups">p-groups</a> is due to <a href="#Segal72">Segal 72</a>. (As Segal remarks on his first page, it may also be deduced from <a href="#Feit67">Feit 67 (14.3)</a>. See also <a href="#Ritter72">Ritter 72</a>.)</p>
+<p>The proof of surjectivity for <a class="existingWikiWord" href="/nlab/show/p-primary+groups">p-primary groups</a> is due to <a href="#Segal72">Segal 72</a>. (As Segal remarks on his first page, it may also be deduced from <a href="#Feit67">Feit 67 (14.3)</a>. See also <a href="#Ritter72">Ritter 72</a>.)</p>
 
 <p>From this the surjectivity for <a class="existingWikiWord" href="/nlab/show/cyclic+groups">cyclic groups</a> follows via the <a class="existingWikiWord" href="/nlab/show/fundamental+theorem+of+cyclic+groups">fundamental theorem of cyclic groups</a>.</p>
 
-<p>A proof of surjectivity in the example that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo>=</mo><msub><mi>S</mi> <mn>4</mn></msub></mrow><annotation encoding="application/x-tex">G = S_4</annotation></semantics></math> is spelled out at <em><a href="Gram-Schmidt+process#CategorifiedGramSchmidtProcess">Categorified Gram-Schmidt process</a></em>. See also the example in <a href="#Montaldi">Montaldi</a> <a href="http://www.maths.manchester.ac.uk/~jm/wiki/Representations/S4">here</a>.</p>
-
 <p>The non-surjectivity for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo>=</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mn>3</mn><mo>×</mo><msub><mi>Q</mi> <mn>8</mn></msub></mrow><annotation encoding="application/x-tex">G = \mathbb{Z}/3 \times Q_8</annotation></semantics></math> was remarked in <a href="#Serre77">Serre 77, p. 104</a>.</p>
 
-<p>To see that injectivity holds precisely for <a class="existingWikiWord" href="/nlab/show/cyclic+groups">cyclic groups</a>, notice that in <a class="existingWikiWord" href="/nlab/show/characteristic+zero">characteristic zero</a> we have that</p>
+<p>To see that injectivity holds precisely for <a class="existingWikiWord" href="/nlab/show/cyclic+groups">cyclic groups</a>, notice that over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi><mo>=</mo><mi>ℚ</mi></mrow><annotation encoding="application/x-tex">k = \mathbb{Q}</annotation></semantics></math> we have that</p>
 
 <ol>
 <li>
@@ -742,9 +736,7 @@ margin-left: 0em;
 <p>This means that for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> not a cyclic group we have <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>dim</mi><mo stretchy="false">(</mo><mi>A</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mo>&gt;</mo><mi>dim</mi><mo stretchy="false">(</mo><mi>R</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">dim(A(G)) \gt dim(R(G))</annotation></semantics></math>, so that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi></mrow><annotation encoding="application/x-tex">\beta</annotation></semantics></math> cannot be injective. On the other hand, for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> a cyclic group this says that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>dim</mi><mo stretchy="false">(</mo><mi>A</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mo>=</mo><mi>dim</mi><mo stretchy="false">(</mo><mi>R</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">dim(A(G)) = dim(R(G))</annotation></semantics></math>, so that if <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi></mrow><annotation encoding="application/x-tex">\beta</annotation></semantics></math> were not injective, its image would have dimension <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>&lt;</mo><mi>dim</mi><mo stretchy="false">(</mo><mi>R</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\lt dim(R(G))</annotation></semantics></math>, which however contradicts the surjectivity asserted by item 2 above.</p>
 </div>
 
-<p>A more general analysis of the <a class="existingWikiWord" href="/nlab/show/cokernel">cokernel</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi></mrow><annotation encoding="application/x-tex">\beta</annotation></semantics></math> is due to <a href="#Berz94">Berz 94</a>, reviewed and expanded on in <a href="#HambletonTaylor99">Hambleton-Taylor 99</a>.</p>
-
-<p>See also the review of the literature in <a href="#BartelDokchitser14">Bartel-Dokchitser 14, p. 1</a>.</p>
+<p>A more general analysis of the <a class="existingWikiWord" href="/nlab/show/cokernel">cokernel</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi></mrow><annotation encoding="application/x-tex">\beta</annotation></semantics></math> is due to <a href="#Berz94">Berz 94</a>, reviewed and expanded on in <a href="#HambletonTaylor99">Hambleton-Taylor 99</a>. See also <a href="#BartelDokchitser14">Bartel-Dokchitser 14, p. 1</a>.</p>
 
 <h2 id="related_entries">Related entries</h2>
 
@@ -833,7 +825,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 12, 2018 at 12:56:44.
+  Last revised on September 12, 2018 at 13:13:15.
   See the <a href="https://ncatlab.org/nlab/history/permutation representation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
