--- a/pages/15836.html
+++ b/pages/15836.html
@@ -941,7 +941,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/wave+function+collapse">Collapse of the wave function</a> (see also <a class="existingWikiWord" href="/nlab/show/propositions+as+projections">propositions as projections</a>) is analogous to (indeed a generalization of) updating a probability distribution; <span class="newWikiWord">Born's Rule<a href="/nlab/new/Born+rule">?</a></span> and <a class="existingWikiWord" href="/nlab/show/Bayes%27+Rule">Bayes' Rule</a> are analogues.</p>
+<p><a class="existingWikiWord" href="/nlab/show/wave+function+collapse">Collapse of the wave function</a> (see also <a class="existingWikiWord" href="/nlab/show/propositions+as+projections">propositions as projections</a>) is analogous to (indeed a generalization of) updating a probability distribution; <span class="newWikiWord">Born's Rule<a href="/nlab/new/Born+rule">?</a></span> and <a class="existingWikiWord" href="/nlab/show/Bayes+rule">Bayes' Rule</a> are analogues.</p>
 </li>
 </ol>
 
@@ -1046,14 +1046,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 12, 2018 at 10:46:13.
+  Last revised on September 12, 2018 at 14:10:12.
   See the <a href="https://ncatlab.org/nlab/history/Bayesian interpretation of quantum mechanics" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Bayesian+interpretation+of+quantum+mechanics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bayesian+interpretation+of+quantum+mechanics/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/Bayesian+interpretation+of+quantum+mechanics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bayesian+interpretation+of+quantum+mechanics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Bayesian+interpretation+of+quantum+mechanics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bayesian+interpretation+of+quantum+mechanics/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/Bayesian+interpretation+of+quantum+mechanics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bayesian+interpretation+of+quantum+mechanics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Bayesian interpretation of quantum mechanics/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
